--- a/index.html
+++ b/index.html
@@ -95,69 +95,69 @@
   </header>
 
   <div class="container">
-    <div class="trofeu">🏆 Campeão: 🇫🇷 <strong>Paris Saint-Germain</strong></div>
-    <div class="finalistas">Chelsea 🇬🇧 <strong>vs</strong> 🇫🇷 Paris Saint-Germain</div>
+    <div class="trofeu">🏆 Campeão: <strong>Chelsea</strong></div>
+    <div class="finalistas">Chelsea 🇬🇧 3<strong>x</strong>0 🇫🇷 Paris Saint-Germain</div>
 
     <div class="ranking">
       <h2>🏆 Ranking final das Enquetes - Mundial de Clubes 2025 🌍</h2>
 
-      <div class="item">#1 - 🥇 <strong>Gadelha</strong> - 18 acertos</div>
-      <div class="item">#2 - 🥈 <strong>Cabral</strong> - 16 acertos</div>
-      <div class="item">#3 - 🥉 <strong>Ruama</strong> - 14 acertos</div>
-      <div class="item">#3 - 🥉 <strong>Gilson</strong> - 14 acertos</div>
-      <div class="item">#4 - <strong>Helo</strong> - 13 acertos</div>
-      <div class="item">#4 - <strong>Carlinhos</strong> - 13 acertos</div>
-      <div class="item">#4 - <strong>Rafael Bacci</strong> - 13 acertos</div>
-      <div class="item">#5 - <strong>Geremias</strong> - 12 acertos</div>
-      <div class="item">#5 - <strong>Winter</strong> - 12 acertos</div>
-      <div class="item">#6 - <strong>Pedro Henrique</strong> - 11 acertos</div>
-      <div class="item">#7 - <strong>Stringher</strong> - 9 acertos</div>
-      <div class="item">#7 - <strong>Ryan</strong> - 9 acertos</div>
-      <div class="item">#8 - <strong>Mendes</strong> - 7 acertos</div>
-      <div class="item">#9 - <strong>Castrão (Gui)</strong> - 6 acertos</div>
-      <div class="item">#10 - <strong>Sidney</strong> - 3 acertos</div>
-      <div class="item">#10 - <strong>Marcos Silva</strong> - 3 acertos</div>
-      <div class="item">#11 - <strong>Vieira</strong> - 2 acertos</div>
-      <div class="item">#11 - <strong>Casaroti</strong> - 2 acertos</div>
-      <div class="item">#11 - <strong>Rodolfo</strong> - 2 acertos</div>
-      <div class="item">#11 - <strong>Regina</strong> - 2 acertos</div>
+      <div class="item">#1 - 🥇 <strong>Gadelha</strong> - 19 acertos</div>
+      <div class="item">#2 - 🥈 <strong>Cabral</strong> - 17 acertos</div>
+      <div class="item">#3 - 🥉 <strong>Gilson</strong> - 15 acertos</div>
+      <div class="item">#3 - 🥉 <strong>Ruama</strong> - 15 acertos</div>
+      <div class="item">#4 - <strong>Carlinhos</strong> - 14 acertos</div>
+      <div class="item">#5 - <strong>Helo</strong> - 13 acertos</div>
+      <div class="item">#5 - <strong>Rafael Bacci</strong> - 13 acertos</div>
+      <div class="item">#5 - <strong>Winter</strong> - 13 acertos</div>
+      <div class="item">#6 - <strong>Geremias</strong> - 12 acertos</div>
+      <div class="item">#7 - <strong>Pedro Henrique</strong> - 11 acertos</div>
+      <div class="item">#8 - <strong>Ryan</strong> - 10 acertos</div>
+      <div class="item">#9 - <strong>Stringher</strong> - 9 acertos</div>
+      <div class="item">#10 - <strong>Mendes</strong> - 7 acertos</div>
+      <div class="item">#11 - <strong>Castrão (Gui)</strong> - 6 acertos</div>
+      <div class="item">#12 - <strong>Sidney</strong> - 3 acertos</div>
+      <div class="item">#12 - <strong>Marcos Silva</strong> - 3 acertos</div>
+      <div class="item">#12 - <strong>Vieira</strong> - 3 acertos</div>
+      <div class="item">#13 - <strong>Casaroti</strong> - 2 acertos</div>
+      <div class="item">#13 - <strong>Rodolfo</strong> - 2 acertos</div>
+      <div class="item">#13 - <strong>Regina</strong> - 2 acertos</div>
 
       <!-- 1 acerto -->
-      <div class="item">#12 - <strong>Fernando</strong> - 1 acerto</div>
-      <div class="item">#12 - <strong>Sobral</strong> - 1 acerto</div>
-      <div class="item">#12 - <strong>Pedro Gabriel</strong> - 1 acerto</div>
-      <div class="item">#12 - <strong>Robinho</strong> - 1 acerto</div>
-      <div class="item">#12 - <strong>Mota</strong> - 1 acerto</div>
-      <div class="item">#12 - <strong>Stephanie</strong> - 1 acerto</div>
-      <div class="item">#12 - <strong>Lincoln</strong> - 1 acerto</div>
-      <div class="item">#12 - <strong>Geovana</strong> - 1 acerto</div>
-      <div class="item">#12 - <strong>Wellington</strong> - 1 acerto</div>
-      <div class="item">#12 - <strong>Alex AJC</strong> - 1 acerto</div>
-      <div class="item">#12 - <strong>Tenório</strong> - 1 acerto</div>
-      <div class="item">#12 - <strong>Zuleide</strong> - 1 acerto</div>
-      <div class="item">#12 - <strong>Kadesh</strong> - 1 acerto</div>
-      <div class="item">#12 - <strong>Borges</strong> - 1 acerto</div>
-      <div class="item">#12 - <strong>Aguiar</strong> - 1 acerto</div>
-      <div class="item">#12 - <strong>Maicon MD</strong> - 1 acerto</div>
-      <div class="item">#12 - <strong>Oliveira</strong> - 1 acerto</div>
+      <div class="item">#14 - <strong>Fernando</strong> - 1 acerto</div>
+      <div class="item">#14 - <strong>Sobral</strong> - 1 acerto</div>
+      <div class="item">#14 - <strong>Pedro Gabriel</strong> - 1 acerto</div>
+      <div class="item">#14 - <strong>Robinho</strong> - 1 acerto</div>
+      <div class="item">#14 - <strong>Mota</strong> - 1 acerto</div>
+      <div class="item">#14 - <strong>Stephanie</strong> - 1 acerto</div>
+      <div class="item">#14 - <strong>Lincoln</strong> - 1 acerto</div>
+      <div class="item">#14 - <strong>Geovana</strong> - 1 acerto</div>
+      <div class="item">#14 - <strong>Wellington</strong> - 1 acerto</div>
+      <div class="item">#14 - <strong>Alex AJC</strong> - 1 acerto</div>
+      <div class="item">#14 - <strong>Tenório</strong> - 1 acerto</div>
+      <div class="item">#14 - <strong>Zuleide</strong> - 1 acerto</div>
+      <div class="item">#14 - <strong>Kadesh</strong> - 1 acerto</div>
+      <div class="item">#14 - <strong>Borges</strong> - 1 acerto</div>
+      <div class="item">#14 - <strong>Aguiar</strong> - 1 acerto</div>
+      <div class="item">#14 - <strong>Maicon MD</strong> - 1 acerto</div>
+      <div class="item">#14 - <strong>Oliveira</strong> - 1 acerto</div>
+      <div class="item">#14 - <strong>Arruda</strong> - 1 acerto</div>
 
-      <!-- 0 acertos -->
-      <div class="item">#13 - 🔦 <strong>Ruan</strong> - 0 acertos</div>
-      <div class="item">#13 - 🔦 <strong>Jair</strong> - 0 acertos</div>
-      <div class="item">#13 - 🔦 <strong>Bruno</strong> - 0 acertos</div>
-      <div class="item">#13 - 🔦 <strong>Carlos Santiago</strong> - 0 acertos</div>
-      <div class="item">#13 - 🔦 <strong>Daniel</strong> - 0 acertos</div>
-      <div class="item">#13 - 🔦 <strong>Henrique</strong> - 0 acertos</div>
-      <div class="item">#13 - 🔦 <strong>Bruna Sartori</strong> - 0 acertos</div>
-      <div class="item">#13 - 🔦 <strong>Silva</strong> - 0 acertos</div>
-      <div class="item">#13 - 🔦 <strong>Cardoso</strong> - 0 acertos</div>
-      <div class="item">#13 - 🔦 <strong>Chicão</strong> - 0 acertos</div>
-      <div class="item">#13 - 🔦 <strong>Mendonça</strong> - 0 acertos</div>
-      <div class="item">#13 - 🔦 <strong>Rocha</strong> - 0 acertos</div>
-      <div class="item">#13 - 🔦 <strong>Mirarch</strong> - 0 acertos</div>
-      <div class="item">#13 - 🔦 <strong>Derick</strong> - 0 acertos</div>
-      <div class="item">#13 - 🔦 <strong>Arruda</strong> - 0 acertos</div>
+      <!-- 0 acertos (lanterna) -->
+      <div class="item">#15 - 🔦 <strong>Ruan</strong> - 0 acertos</div>
+      <div class="item">#15 - 🔦 <strong>Jair</strong> - 0 acertos</div>
+      <div class="item">#15 - 🔦 <strong>Bruno</strong> - 0 acertos</div>
+      <div class="item">#15 - 🔦 <strong>Carlos Santiago</strong> - 0 acertos</div>
+      <div class="item">#15 - 🔦 <strong>Daniel</strong> - 0 acertos</div>
+      <div class="item">#15 - 🔦 <strong>Henrique</strong> - 0 acertos</div>
+      <div class="item">#15 - 🔦 <strong>Bruna Sartori</strong> - 0 acertos</div>
+      <div class="item">#15 - 🔦 <strong>Silva</strong> - 0 acertos</div>
+      <div class="item">#15 - 🔦 <strong>Cardoso</strong> - 0 acertos</div>
+      <div class="item">#15 - 🔦 <strong>Chicão</strong> - 0 acertos</div>
+      <div class="item">#15 - 🔦 <strong>Mendonça</strong> - 0 acertos</div>
+      <div class="item">#15 - 🔦 <strong>Rocha</strong> - 0 acertos</div>
+      <div class="item">#15 - 🔦 <strong>Mirarch</strong> - 0 acertos</div>
+      <div class="item">#15 - 🔦 <strong>Derick</strong> - 0 acertos</div>
     </div>
   </div>
 </body>
-                                </html>
+        </html>
